# easylisp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  ast.cpp  ast.hpp  builtins.cpp  config.hpp  environment.cpp  environment.hpp  file_util.cpp  file_util.hpp  interpreter.cpp  interpreter.hpp  main.cpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  token.hpp  value.cpp  value.hpp
test/: CMakeLists.txt  ast_printer.hpp  ast_test.cpp  env_test.cpp  interpreter_test.Equality_test.eq__with_no_arguments.approved.txt  interpreter_test.Equality_test.equal__with_no_arguments.approved.txt  interpreter_test.Evaluator_test.Cannot_apply_to_list.approved.txt  interpreter_test.Evaluator_test.Cannot_apply_to_number.approved.txt  interpreter_test.Evaluator_test.cannot_invoke_+_without_arguments.approved.txt  interpreter_test.Evaluator_test.divide.approved.txt  interpreter_test.Evaluator_test.if_with_none-boolean_condition_is_not_allowed.approved.txt  interpreter_test.Evaluator_test.lambda_with_unmatching_numbers_of_arguments.approved.txt  interpreter_test.Evaluator_test.minus.approved.txt  interpreter_test.Evaluator_test.multiply.approved.txt  interpreter_test.Evaluator_test.negation.approved.txt  interpreter_test.Evaluator_test.plus.approved.txt  interpreter_test.Evaluator_test.undefined_variable.approved.txt  interpreter_test.List_evaluation_test.cdr_with_2_arguments_is_invalid.approved.txt  interpreter_test.List_evaluation_test.cdr_with_empty_list.approved.txt  interpreter_test.List_evaluation_test.cons_with_2_arguments_is_invalid.approved.txt  interpreter_test.List_evaluation_test.cons_with_3_arguments_is_invalid.approved.txt  interpreter_test.List_evaluation_test.cons_with_empty_list.approved.txt  interpreter_test.cpp  main.cpp  parser_test.Parse_bad_syntax.Multiple_toplevel.approved.txt  parser_test.Parse_bad_syntax.Single_right_paren.approved.txt  parser_test.Parse_definition.Definition_with_2_expressions.approved.txt  (+18 more)
(+11 files in other folders)
